# blizzard-tutorials

./: .readthedocs.yaml  README.md  fix_stuff.py  mkdocs.yml  pyproject.toml
Attachments/: aaUberlisk.SC2Map
docs/: index.md
docs/Classic_Tutorials/: index.md
docs/Classic_Tutorials/01_Terrain_Module/: 1.md  2.md  3.md  4.md  5.md
docs/Classic_Tutorials/01_terrain/: 1.md  5.md
docs/Classic_Tutorials/02_Trigger_Module/: 1.md  2.md  3.md  4.md
docs/Classic_Tutorials/02_trigger/: 4.md
docs/Classic_Tutorials/03_Data_module/: 1.md  2.md  3.md  4.md
docs/Classic_Tutorials/03_data/: 1.md  2.md  3.md
docs/Classic_Tutorials/04_Misc/: actor-cheats.md  mapmaking-best-practices.md  mastering-mapmaking.md  missile-movers.md  publishing.md
docs/Data_Primer/01_Simple_Firebolt/: 01_Firebolt.md
docs/New_Tutorials/01_Introduction/: 001_Editor_Introduction.md  002_Getting_to_the_Editor.md  003_Navigating_the_Interface.md  004_Maps.md  005_Creating_a_Map.md  006_Mods.md  007_Creating_Mods.md  008_Map_Properties.md  009_Player_Properties.md  009_Player_Properties_Completed.SC2Map  010_Team_Placement.md  010_Team_Placement_Start.SC2Map  011_BattleNet_Info.md  012_Game_Variants.md  013_Standard_Dependencies.md  014_The_Importer.md  015_Finding_Help.md  016_Publishing.md  017_Editor_History.md
docs/New_Tutorials/02_Terrain_Editor/: 018_Terrain_Editor_Introduction.md  (+17 more)
docs/css/: custom.css
docs/data/: 1.md  2.md  3.md  4.md
docs/terrain/: 1.md  2.md  3.md  4.md  5.md
docs/trigger/: 1.md  2.md  3.md  4.md
theme/: breadcrumbs.html  footer.html  main.html
(+112 files in other folders)
