[tool.poetry]
name = "sc2-guides"
version = "0.1.0"
description = ""
authors = ["SC2Mapster"]
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
mkdocs = "~1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
